--- a/templates/movies/base_out.html
+++ b/templates/movies/base_out.html
@@ -29,7 +29,7 @@
         <span class="icon-bar"></span>
 	<span class="icon-bar"></span>
       </button>
-      <a href="{% url 'movies:index' %}" class="navbar-brand"><font color="dodgerblue">M</font>ovie<font color="white">T</font>ime!</a>
+      <a href="{% url 'movies:index' %}" class="navbar-brand"><font color="dodgerblue">M</font>ovie<font color="white">T</font>ime!<sup><font color="orange">(beta)</font></sup></a>
     </div>
     
     <!-- Menu Items -->
