--- a/templates/movies/votemovie.html
+++ b/templates/movies/votemovie.html
@@ -2,6 +2,52 @@
 
 {% block content %}
 
+<form action="{% url 'movies:votemovie' %}" method="post" id="vote">
+  {% csrf_token %}
+</form>
+
+<form action="{% url 'movies:votemovie' %}" method="post" id="revote">
+  {% csrf_token %}
+</form>
+
+<form action="{% url 'movies:votemovie' %}" id="pass">
+</form>
+
+
+<!-- DEBUGGING -->
+{% if uservotes %}
+Uservotes: <br/>
+{% for vote in uservotes %}
+{{vote.user}} {{vote.itemType}} {{vote.itemId}} {{vote.like}}<br/>
+{% endfor %}
+{% endif %}
+
+
+<!-- STATUS -->
+
+{% if votedmovie %}
+{% if voteicon == "fa-arrow-right" %}
+<div class="container fluid">
+ <font color="red">Last vote</font>: Pass on <em>{{ votedmovie.title }} ({{votedmovie.year}})</em> <button class="btn btn-xs btn-info" type="submit" form="revote" name="revote" value="{{votedmovie.id}} -1">change</button>
+  <br/>&nbsp;
+</div>
+{% else %}
+<div class="container fluid">  
+  <font color="red">Last vote</font>: <i class="fa {{voteicon}}"></i> for <em>{{ votedmovie.title }} ({{votedmovie.year}})</em> <button class="btn btn-xs btn-info" type="submit" form="revote" name="revote" value="{{votedmovie.id}} -1">change</button>
+  <br/>&nbsp;
+</div>
+{% endif %}
+{% endif %}
+
+{% if revote %}
+<div class="container fluid">
+  <font color="red">Revote</font>:<br/>&nbsp;
+</div>
+{% endif %}
+
+
+
+<!--  Movie Title, Year -->
 
 
 {% if movie %}
@@ -10,6 +56,7 @@
     <center>
       <h3 style="color:black;">{{ movie.title }} ({{movie.year}})</h3>
     </center>
+    
   </div>
   <center>
     <svg width="175" height="239">
@@ -28,63 +75,62 @@
 <div class="container fluid">
   <div class="alert alert-danger">
     <center>
-      <h3>Site maintenance: come back here soon!</h3>
+      <h3>Site maintenance: check back here soon!</h3>
     </center>
   </div>
 </div>
 {% endif %}
 
 
-<div class="container">
-<div class="row hidden-md hidden-sm hidden-lg">
-  <div class="col col-xs-2 col-xs-offset-1">
-    <button class="btn btn-default">
-      <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-2x fa-thumbs-o-up"></i></a>
-    </button>
+
+  <div class="container">
+
+    <!-- Vote Buttons for Phone -->
+
+    <div class="row hidden-md hidden-sm hidden-lg">
+      <div class="col col-xs-2 col-xs-offset-2">
+        <button class="btn btn-default" type="submit" value="{{movie.id}} 1" form="vote" name="thevote">
+	  <i class="fa fa-2x fa-thumbs-o-up"></i>
+	</button>
+      </div>
+      <div class="col col-xs-2">
+	<button class="btn btn-default" type="submit" value="{{movie.id}} -1" form="vote" name="thevote">
+	  <i class="fa fa-2x fa-thumbs-o-down"></i>
+	</button>
+      </div>
+      <div class="col col-xs-2">
+	<button class="btn btn-default" type="submit" value="{{movie.id}} 0" form="vote" name="thevote">
+	  <i class="fa fa-2x fa-arrow-right"></i>
+	</button>
+      </div>
+    </div>
+
+    <!-- Vote Buttons for Tablet and Desktop -->
+
+    <div class="row hidden-xs">
+      <div class="col col-sm-1 col-sm-offset-3">
+	<button class="btn btn-default" type="submit" value="{{movie.id}} 1" form="vote" name="thevote">
+	    <i class="fa fa-4x fa-thumbs-o-up"></i>
+	</button>
+      </div>
+      <div class="col col-sm-1 col-sm-offset-1">
+	<button class="btn btn-default" type="submit" value="{{movie.id}} -1" form="vote" name="thevote">
+	  <i class="fa fa-4x fa-thumbs-o-down"></i>
+	</button>
+      </div>
+      <div class="col col-sm-1 col-sm-offset-1">
+        <button class="btn btn-default" type="submit" value="{{movie.id}} 0" form="vote" name="thevote">
+	  <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-4x fa-arrow-right"></i></a>
+	</button>
+      </div>
+    </div>
+
   </div>
-  <div class="col col-xs-2">
-    <button class="btn btn-default">
-      <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-2x fa-thumbs-o-down"></i></a>
-    </button>
-  </div>
-  <div class="col col-xs-2 col-xs-offset-1">
-    <button class="btn btn-default">
-      <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-2x fa-arrow-left"></i></a>
-    </button>
-  </div>
-  
-  <div class="col col-xs-2">
-    <button class="btn btn-default">
-      <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-2x fa-arrow-right"></i></a>
-    </button>
-  </div>
-</div>
+
+</form>
 
 
-<div class="row hidden-xs">
-  <div class="col col-sm-1 col-sm-offset-2">
-    <button class="btn btn-default">
-      <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-4x fa-thumbs-o-up"></i></a>
-    </button>
-  </div>
-  <div class="col col-sm-1 col-sm-offset-1">
-    <button class="btn btn-default">
-      <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-4x fa-thumbs-o-down"></i></a>
-    </button>
-  </div>
-  <div class="col col-sm-1 col-sm-offset-1">
-    <button class="btn btn-default">
-      <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-4x fa-arrow-left"></i></a>
-    </button>
-  </div>
-  <div class="col col-sm-1 col-sm-offset-1">
-    <button class="btn btn-default">
-      <a style="color:black;" href="{% url 'movies:votemovie' %}"><i class="fa fa-4x fa-arrow-right"></i></a>
-    </button>
-  </div>
-</div>
 
-</div>
 
 <div class="container">
   <p>&nbsp;
@@ -96,9 +142,7 @@
 
 <p>&nbsp;
 <p>&nbsp;
-
-
-
+  
 
 {% endblock %}
 
