added more django jinja/html template

--- a/templates/movies/home.html
+++ b/templates/movies/home.html
@@ -3,31 +3,45 @@
 
 {% block content %}
 
-<p>&nbsp;
+
+
+<!-- FORMS -->
+
+<form action="{% url 'movies:search' %}" method="get" id="search">
+</form>
 
 <div class="container fluid">
-
   <div class="row">
-    <div class="col col-sm-12">
-      <p>Welcome to MovieTime! </p>
+    <div class="col col-sm-10 col-sm-offset-1">
+      <p>Welcome to <b><font color="dodgerblue">M</font>ovieTime!</b> your very own 
+	personalized guide to the movies. The more you vote, the better
+	your pairing with critics will be and the better your recommendations will be. 
+	You can also add movies to your own <em>Watch List</em> when you come across one 
+	that looks interesting. The site currently hosts data for {% if num_reviews %}{{num_reviews}}
+	{% else %}358,751{% endif %} reviews on 
+	{% if num_movies %}{{ num_movies }}{% else %}3,025{% endif %} movie titles released
+	between the years 2000 and 2014. Have fun!</p>
     </div>
   </div>
 
-  <div class="well col-sm-4 col-sm-offset-1">
-    <a href="{% url 'movies:vote' %}"><i class="fa  fa-check"></i>&nbsp;&nbsp; <font size=+1>Vote</font></a>
+  <div class="row">
+    <div class="col col-sm-10 col-sm-offset-1">
+      <a href="{% url 'movies:randommovie' %}"><i class="fa  fa-check"></i>&nbsp;&nbsp; <font size=+1>Vote</font></a>
+      <p>&nbsp;</p>
+
+      <a href="#"><i class="fa  fa-video-camera"></i>&nbsp;&nbsp; <font size=+1>Recommendations</font></a>
+      <p>&nbsp;</p>
+      
+      <a href="{% url 'movies:lists' %}"><i class="fa  fa-list"></i>&nbsp;&nbsp; <font size=+1>My Lists</font></a>
+      <p>&nbsp;</p>
+      
+      <!--
+      <a href="#"><i class="fa  fa-search"></i>&nbsp;&nbsp; <font size=+1>Explore</font></a>
+      <p>&nbsp;</p>
+      -->
+    </div>  
   </div>
 
-  <div class="well col-sm-4 col-sm-offset-2">
-    <a href="#"><i class="fa  fa-video-camera"></i>&nbsp;&nbsp; <font size=+1>Watch</font></a>
-  </div>
-
-  <div class="well col-sm-4 col-sm-offset-1">
-    <a href="{% url 'movies:lists' %}"><i class="fa  fa-list"></i>&nbsp;&nbsp; <font size=+1>My Lists</font></a>
-  </div>
-
-  <div class="well col-sm-4 col-sm-offset-2">
-    <a href="#"><i class="fa  fa-search"></i>&nbsp;&nbsp; <font size=+1>Explore</font></a>
-  </div>  
 </div>
 
 <p>&nbsp;
