--- a/templates/movies/about_in.html
+++ b/templates/movies/about_in.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container fluid">
 <p>&nbsp;
-<p><font color="dodgerblue">M</font>ovieTime! is a website that helps people discover and explore movies, writers, actors, and directors. 
+<p><b><font color="dodgerblue">M</font>ovieTime!</b> is a website that helps people discover and explore movies, writers, actors, and directors. 
 
 <p>Discovery is powered by a collaborative filtering algorithm to pair users and critics.
 
