--- a/templates/movies/base_in.html
+++ b/templates/movies/base_in.html
@@ -24,7 +24,7 @@
 <body>
 
 <nav class="navbar-static navbar-inverse">
-  <div class="container">
+  <div class="container-fluid">
     
     <!-- Logo -->
     <div class="navbar-header">
@@ -48,36 +48,44 @@
     <div class="collapse navbar-collapse" id="mainNavBar">
       <ul class="nav navbar-nav">
 	<!-- Dropdown menu -->
-	<li ><a href="{% url 'movies:home' %}">Home</a></li>
+
+	<li><a href="{% url 'movies:home'  %}">Home</a></li>
+
+	<li ><a href="#">Recommend</a></li>
 
 	<li class="dropdown">
 	  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lists<span class="caret"></span></a>
 	  <ul class="dropdown-menu">
-	    <li><a href="#">Watch List</a></li>
+	    <li><a href="{% url 'movies:watchlist' %}">Watch List</a></li>
 	    <li><a href="{% url 'movies:votelist' %}">My Votes</a></li>
 	  </ul>
 	</li>
+	<li><a href="{% url 'movies:randommovie' %}">Vote</a></li>  
 
+	<!--
 	<li class="dropdown">
 	  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Vote<span class="caret"></span></a>
 	  <ul class="dropdown-menu">
-	    <li><a href="{% url 'movies:votemovie' %}">Movies</a></li>
+	    <li><a href="{% url 'movies:randommovie' %}">Movies</a></li>
+	    <!-- 
 	    <li><a href="#">Actors</a></li>
             <li><a href="#">Directors</a></li>
             <li><a href="#">Writers</a></li>
 	  </ul>
 	</li>
+	-->
 
+	<!--
 	<li class="dropdown">
 	  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore<span class="caret"></span></a>
           <ul class="dropdown-menu">
-	    <li><a href="#">Movies</a><li>
+	    <li><a href="{% url 'movies:search' %}">Movies</a><li>
 	    <li><a href="#">Actors</a></li>
             <li><a href="#">Directors</a></li>
             <li><a href="#">Writers</a></li>
 	  </ul>
 	</li>
-
+	-->
 	
 	<li ><a href="{% url 'movies:about' %}">About</a></li>
 	
@@ -109,7 +117,23 @@
 <p>&nbsp;<p>&nbsp;
 </div>
 
+<div class="container fluid">
 
+  <div class="row">
+    <div class="col col-sm-10 col-sm-offset-1">
+
+      <div class="input-group">
+        <input type="text" name="search_text" class="form-control input-lg" placeholder="Search movies"  />
+        <span class="input-group-btn">
+          <button class="btn btn-info btn-lg" type="submit" form="search">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
+        </span>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 {% block content %}{% endblock %}
 
