--- a/templates/movies/lists.html
+++ b/templates/movies/lists.html
@@ -4,19 +4,21 @@
 
 
 <div class="container">
-  <h3>Select a list or return home <a href="{% url 'movies:home' %}"><i class="fa fa-home"></i></a></h3>
+  <h3>Select a list:</h3>
   <p>&nbsp;
 </div>
 
 <div class="container fluid">
   
- <div class="well col-sm-4 col-sm-offset-1">
-   <a href="{% url 'movies:lists' %}"><font  size=+1>Watch List</font></a>
+ <div class="col-sm-4 col-sm-offset-1">
+   <a href="{% url 'movies:watchlist' %}"><font  size=+1>Watch List</font></a>
+   <p>&nbsp;</p>
  </div>
  
  
- <div class="well col-sm-4 col-sm-offset-1">
+ <div class=" col-sm-4 col-sm-offset-1">
    <a href="{% url 'movies:votelist' %}"><font  size=+1>My Votes</font></a>
+   <p>&nbsp;</p>
  </div>
  
 
