updated html templates

--- a/templates/about_in.html
+++ b/templates/about_in.html
@@ -9,7 +9,21 @@
 <p>Discovery is powered by a collaborative filtering algorithm to pair users and critics.
 
 <p>It is an MVC based site built on django, MySql, and Bootstrap by Casey Meakin.
+
+<p>&nbsp;
+<p>The <em>to do</em> list (<font color="#999">in progress</font>):
+<ul>
+<li>Add a genre filter so that you can selectively vote or get recommendations that are genre specific.
+<li>Link actors, writers, and directors info to the movie pages.
+<li>Add additional navigation buttons to more easily move between voting, recommendations, and lists.
+<li>Remove movies from voting and recommendation that are currently on your watch list.
+</ul>
+
 </div>
+
+<p>&nbsp;
+<p>&nbsp;
+
 
 {% endblock %}
 
