--- a/templates/about_out.html
+++ b/templates/about_out.html
@@ -9,7 +9,18 @@
 <p>Discovery is powered by a collaborative filtering algorithm to pair users and critics.
 
 <p>It is an MVC based site built on django, MySql, and Bootstrap by Casey Meakin.
+
+<p>&nbsp;
+<p>The <em>to do</em> list (<font color="#999">in progress</font>):
+<ul>
+<li>Login to see the <em>to do list</em>!
+</ul>
+
 </div>
+
+<p>&nbsp;
+<p>&nbsp;
+
 
 {% endblock %}
 
