--- a/templates/moviedetail.html
+++ b/templates/moviedetail.html
@@ -58,7 +58,7 @@ Uservotes: <br/>
 <div class="container fluid">
   <div class="alert alert-danger">
     <center>
-      <h3>Site maintenance: check back here soon!</h3>
+      <h3>Movie not in database</h3>
     </center>
   </div>
 </div>
