--- a/templates/base_out.html
+++ b/templates/base_out.html
@@ -29,9 +29,10 @@
         <span class="icon-bar"></span>
 	<span class="icon-bar"></span>
       </button>
-      <a href="{% url 'movies:index' %}" class="navbar-brand"><font color="dodgerblue">M</font>ovie<font color="white">T</font>ime!<sup><font color="orange">(beta)</font></sup></a>
+      <a href="{% url 'movies:index' %}" class="navbar-brand">
+	<font color="dodgerblue">M</font>ovie<font color="white">T</font>ime!<sup><font color="orange">(beta)</font></sup></a>
     </div>
-    
+
     <!-- Menu Items -->
     <div class="collapse navbar-collapse" id="mainNavBar">
       <ul class="nav navbar-nav">
