update to html / jinja templates

--- a/templates/about_in.html
+++ b/templates/about_in.html
@@ -2,21 +2,34 @@
 
 
 {% block content %}
-<div class="container fluid">
+<div class="container">
 <p>&nbsp;
 <p><b><font color="dodgerblue">M</font>ovieTime!</b> is a website that helps people discover and explore movies, writers, actors, and directors. 
-
 <p>Discovery is powered by a collaborative filtering algorithm to pair users and critics.
-
-<p>It is an MVC based site built on django, MySql, and Bootstrap by Casey Meakin.
+<p>It is an MVC based site built on django, MySql, and Bootstrap, developed by Casey Meakin as a side project.  
+<p>Some of the source code can be found at <a href="http://github.com/CaseyAMeakin" target="_"><i class="fa fa-github-square"></i> github:CaseyAMeakin</a>.
 
 <p>&nbsp;
-<p>The <em>to do</em> list (<font color="#999">in progress</font>):
+<p>The <em>to do</em> list (<font color="#999">in progress -- ordered by expected availability</font>):
 <ul>
-<li>Add a genre filter so that you can selectively vote or get recommendations that are genre specific.
+<li>Add a genre filter so that you can selectively vote or get recommendations that are genre specific (<font color="salmon">mostly complete</font>).
+<li>Add popup to vote on recommended movie page list.
+<li>Add recommended movie status: <em>is it up to date with your latest votes or do you need a refresh?</em>
+<li>Add "social" component allowing user to share movie lists with your friends or make recommendations to friends.
 <li>Link actors, writers, and directors info to the movie pages.
+<li>Link to critic data and provide critic specific suggestions.
 <li>Add additional navigation buttons to more easily move between voting, recommendations, and lists.
 <li>Remove movies from voting and recommendation that are currently on your watch list.
+<li>Add info to streaming and other availability for  movies, e.g., Netflix, Amazon On Demand, Apple iTunes, etc. Powered by www.canistream.it.
+</ul>
+<p>Slightly longer term <em>to do</em> list: <!--  (<font color="#999"></font>): -->
+<ul>
+<li>Add movies back to <em>1886</em>!
+<li>Add movie scripts linked to movie titles and writer, actor, and director credits.
+</ul>
+<p>Slightly more <b>interesting</b> <em>to do</em> list:
+<ul>
+<li>Add a recommendation engine based on user query, critic review sentiment, and plot synopisis data.
 </ul>
 
 </div>
