--- a/templates/about_out.html
+++ b/templates/about_out.html
@@ -8,7 +8,7 @@
 
 <p>Discovery is powered by a collaborative filtering algorithm to pair users and critics.
 
-<p>It is an MVC based site built on django, MySql, and Bootstrap by Casey Meakin.
+<p>It is an MVC based site built on django, MySql, and Bootstrap, developed by Casey Meakin as a side project.
 
 <p>&nbsp;
 <p>The <em>to do</em> list (<font color="#999">in progress</font>):
