--- a/templates/votelist.html
+++ b/templates/votelist.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="container-fluid">
+<div class="container">
   
   <div class="row">
     <div class="col col-xs-12">
